[gd_scene load_steps=13 format=3 uid="uid://bpji6k114ampn"]

[ext_resource type="PackedScene" uid="uid://c6erc6x87lbfp" path="res://scene/main-game.tscn" id="1_8t38w"]
[ext_resource type="Script" path="res://gdScript/MainMenu.gd" id="1_r56rg"]
[ext_resource type="PackedScene" uid="uid://dgvnp5f71x0ji" path="res://scene/setting.tscn" id="2_pc2r8"]
[ext_resource type="Texture2D" uid="uid://cjv3fvmxquo3q" path="res://sprite/button/normal-button.png" id="2_xuya5"]
[ext_resource type="Texture2D" uid="uid://c3ycdbnabqqct" path="res://sprite/button/focus-button.png" id="3_1r5v6"]
[ext_resource type="FontFile" uid="uid://ddximxi3x03yj" path="res://font/PixelOperator8.ttf" id="4_shnf5"]
[ext_resource type="LabelSettings" uid="uid://co2e0c20pf5eo" path="res://ui/label-mainMenu.tres" id="5_swt16"]
[ext_resource type="PackedScene" uid="uid://3atucil4gvk7" path="res://scene/creadit.tscn" id="7_wg72w"]

[sub_resource type="LabelSettings" id="LabelSettings_eqdpa"]
font = ExtResource("4_shnf5")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5pkin"]
font = ExtResource("4_shnf5")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vvh85"]
font = ExtResource("4_shnf5")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xnhl7"]
font = ExtResource("4_shnf5")
font_color = Color(0, 0, 0, 1)

[node name="Node" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r56rg")

[node name="Control4" type="Control" parent="."]
custom_minimum_size = Vector2(0, 20)
anchors_preset = 0
offset_bottom = 20.0

[node name="Label" type="Label" parent="Control4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 44.0
offset_top = 108.0
offset_right = 335.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
text = "ARCADE GAMEHUB"
label_settings = ExtResource("5_swt16")

[node name="VBoxContainer" type="VBoxContainer" parent="Control4"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 536.0
offset_top = 254.0
offset_right = 664.0
offset_bottom = 500.0
grow_vertical = 0
scale = Vector2(1.5, 1.5)

[node name="TextureButton" type="TextureButton" parent="Control4/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_xuya5")
texture_focused = ExtResource("3_1r5v6")

[node name="Label" type="Label" parent="Control4/VBoxContainer/TextureButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -8.0
offset_right = 28.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"
label_settings = SubResource("LabelSettings_eqdpa")

[node name="Control" type="Control" parent="Control4/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="TextureButton2" type="TextureButton" parent="Control4/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
texture_normal = ExtResource("2_xuya5")
texture_focused = ExtResource("3_1r5v6")

[node name="Label" type="Label" parent="Control4/VBoxContainer/TextureButton2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -8.0
offset_right = 47.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "SETTING"
label_settings = SubResource("LabelSettings_5pkin")

[node name="Control2" type="Control" parent="Control4/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="TextureButton3" type="TextureButton" parent="Control4/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
texture_normal = ExtResource("2_xuya5")
texture_focused = ExtResource("3_1r5v6")

[node name="Label" type="Label" parent="Control4/VBoxContainer/TextureButton3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -8.0
offset_right = 40.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "CREDIT"
label_settings = SubResource("LabelSettings_vvh85")

[node name="Control3" type="Control" parent="Control4/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="TextureButton4" type="TextureButton" parent="Control4/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
texture_normal = ExtResource("2_xuya5")
texture_focused = ExtResource("3_1r5v6")

[node name="Label" type="Label" parent="Control4/VBoxContainer/TextureButton4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -8.0
offset_right = 26.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "QUIT"
label_settings = SubResource("LabelSettings_xnhl7")

[node name="Control" parent="." instance=ExtResource("1_8t38w")]
visible = false
layout_mode = 1

[node name="Control2" parent="." instance=ExtResource("2_pc2r8")]
visible = false
layout_mode = 1

[node name="Control3" parent="." instance=ExtResource("7_wg72w")]
visible = false
layout_mode = 1

[node name="Label" parent="Control3" index="2"]
layout_mode = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 120.0
offset_top = 32.0
offset_right = 198.0
offset_bottom = 56.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="Control4/VBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Control4/VBoxContainer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="Control4/VBoxContainer/TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="Control4/VBoxContainer/TextureButton4" to="." method="_on_texture_button_4_pressed"]
[connection signal="pressed" from="Control/TextureButton2" to="." method="_on_texture_button_2_pressed_child_1"]
[connection signal="pressed" from="Control2/VBoxContainer/TextureButton3" to="." method="_on_texture_button_3_pressed_child_2"]
[connection signal="pressed" from="Control3/TextureButton2" to="." method="_on_texture_button_2_pressed_child_3"]

[editable path="Control"]
[editable path="Control2"]
[editable path="Control3"]
